--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -13,6 +13,10 @@ include = [
     "whisper.cpp/CMakeLists.txt",
     "whisper.cpp/cmake",
     "whisper.cpp/src/coreml",
+    "whisper.cpp/src/coreml/whisper-encoder.h",
+    "whisper.cpp/src/coreml/whisper-encoder.mm",
+    "whisper.cpp/src/coreml/whisper-encoder-impl.h",
+    "whisper.cpp/src/coreml/whisper-encoder-impl.m",
     "whisper.cpp/src/CMakeLists.txt",
     "whisper.cpp/src/whisper.cpp",
     "whisper.cpp/include/whisper.h",
